fix: Fix code text not showing properly on light themes

--- a/css/core.css
+++ b/css/core.css
@@ -639,6 +639,7 @@ pre {
 
 code {
   background: var(--sat-search-bar-focus);
+  color: var(--for-white);
   padding: 3px 5px;
   font-size: 0.9rem;
   border-radius: 8px;
